mejora del nombre de yape

--- a/templates/content_site/invitated_success.html
+++ b/templates/content_site/invitated_success.html
@@ -20,7 +20,7 @@
                     <div class="mt-4">
                         <p class="text-muted">
                             <strong>💳 Último paso:</strong> Realiza el pago de 10 soles por Yape al número 
-                            <span class="text-primary">991 337 159</span> y envíanos el comprobante al WhatsApp. 📲
+                            <span class="text-primary">991 337 159 (Lucero Coronado)</span> y envíanos el comprobante al WhatsApp. 📲
                         </p>
                         <div class="d-flex justify-content-center align-items-center">
                             <img src="{% static 'img/icons/yape-icon.png' %}" alt="Yape Icon" style="width: 60px; height: auto;">
