mejora del nombre form

--- a/templates/content_site/invitated.html
+++ b/templates/content_site/invitated.html
@@ -9,7 +9,7 @@
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                 <h6 class="section-title bg-white text-center px-3 color-oran">Invitación</h6>
-                <h2 class="mb-5 color-cafe">Solo para alumnos del Full Pass: <br> ¡Invita a un amigo por tan solo S/10!</h2>
+                <h2 class="mb-5 color-cafe">Solo para alumnos del Full Class Domingo: <br> ¡Invita a un amigo por tan solo S/10!</h2>
             </div>
             <div class="row g-5">
                 {% if error_message %}
@@ -52,7 +52,7 @@
                     <div class="mb-3">
                         <p class="small text-muted">
                             <strong>Condiciones:</strong> 
-                            Esta promoción solo aplica para personas que no hayan sido alumnos o invitados anteriormente. Cuban Groove se reserva el derecho de verificar esta información.
+                            Solo aplica para personas que no hayan sido alumnos o invitados anteriormente. Valido para cualquier clase de una Hora.Cuban Groove se reserva el derecho de verificar esta información.
                         </p>
                     </div>
 
