--- a/templates/courses/course_detail.html
+++ b/templates/courses/course_detail.html
@@ -38,7 +38,7 @@
 
                         <div class="col-lg-12 col-md-12 wow zoomIn" data-wow-delay="0.1s">
                             {% if course.video_url %}
-                                <iframe width="100%" height="300" src="{{ course.video_url }}&rel=0&showinfo=0&controls=0"  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/4sNI7IbPhlI?si=QAfOXclkhxVG7sUx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                             {% else %}
                                 <p>No video available</p>
                             {% endif %}
