--- a/templates/courses/course_detail.html
+++ b/templates/courses/course_detail.html
@@ -37,23 +37,38 @@
                     <div class="row g-3">
 
                         <div class="col-lg-12 col-md-12 wow zoomIn" data-wow-delay="0.1s">
-                            {% if course.video_url %}
-                            <iframe 
-                                width="100%" 
-                                height="300" 
-                                src="{{ course.video_url }}&rel=0&showinfo=0&controls=0&vq=small"  
-                                title="YouTube video player" 
-                                frameborder="0" 
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                                referrerpolicy="strict-origin-when-cross-origin" 
-                                allowfullscreen
-                                loading="lazy">
-                            </iframe>
+                            <!-- Escritorio -->
+                            <div class="d-none d-md-block">
+                                {% if course.video_url %}
+                                <iframe 
+                                    width="100%" 
+                                    height="300" 
+                                    src="{{ course.video_url }}&rel=0&showinfo=0&controls=0&vq=small"  
+                                    title="YouTube video player" 
+                                    frameborder="0" 
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                                    referrerpolicy="strict-origin-when-cross-origin" 
+                                    allowfullscreen
+                                    loading="lazy">
+                                </iframe>
+                                {% else %}
+                                    <p>No video available</p>
+                                {% endif %}
+                            </div>
                         
-                            {% else %}
-                                <p>No video available</p>
-                            {% endif %}
+                            <!-- Móvil -->
+                            <div class="d-block d-md-none">
+                                {% if course.video_mp4 %}
+                                <video controls width="100%">
+                                    <source src="{{ course.video_mp4.url }}" type="video/mp4">
+                                    Tu navegador no soporta el elemento de video.
+                                </video>
+                                {% else %}
+                                    <p>No video available</p>
+                                {% endif %}
+                            </div>
                         </div>
+                        
                         <div class="col-lg-6 col-md-12 wow zoomIn" data-wow-delay="0.3s">
 
                                 <img class="img-fluid" src="{{ course.image_fiz.url }}" alt="{{ course.title }}">
