--- a/templates/courses/courses.html
+++ b/templates/courses/courses.html
@@ -10,9 +10,9 @@
         <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                    <h2 class="section-title bg-white text-center px-3 color-oran custom-h6">{% if title %}{{ title }}{% endif %}</h2>
-                    <h1 class="custom-h2 mb-2 color-cafe">Clases de Baile | Clases de Salsa en Lima</h1>
-                    <p>En Cuban Groove te ayudamos a encontrar el curso de baile perfecto para ti. Aprende salsa, timba cubana y domina un estilo auténtico. ¡Únete a nuestras clases y transforma tu forma de bailar hoy mismo!</p>
+                    <h1 class=" section-title bg-white text-center px-3 color-oran custom-h6">{% if title %}{{ title }}{% endif %}</h1>
+                    <h2 class="mb-2 color-cafe">"¿Te sientes inseguro al bailar en eventos sociales?"</h2>
+                    <p>En Cuban Groove te ayudamos a encontrar el curso de baile perfecto para ti. Aprenderas a bailar mientras te integras a una comunidad salsera y timbera. Practicaras lo aprendido en diferentes eventos sociales de baile. ¡Únete a nuestras clases hoy mismo!</p>
 
                 </div>
                 <div class="row g-4 justify-content-center">
