--- a/templates/index.html
+++ b/templates/index.html
@@ -37,9 +37,9 @@
         <div class="container-xxl mb-5">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="section-title bg-white text-center px-3 color-oran">Cursos Populares</h6>
-                    <h1 class="custom-h2 mb-2 color-cafe">Clases de Baile</h1>
-                    <p>En Cuban Groove te asesoramos para encontrar el curso de baile ideal. Aprende salsa, timba cubana y destaca con un estilo único. ¡Descubre más sobre nuestros cursos y mejora tu técnica de baile hoy mismo!</p>
+                    <h1 class="section-title bg-white text-center px-3 color-oran custom-h6">Cursos de Baile para Adultos</h1>
+                    <p class="custom-h2 mb-2 color-cafe">¿Sientes que tus pasos no se ven fluidos o elegantes en la pista de baile?</p>
+                    <p>En Cuban Groove te asesoramos para encontrar el curso de baile ideal. Aprenderas a bailar mientras te integras a una comunidad salsera y timbera. Practicaras lo aprendido en diferentes eventos sociales de baile.. ¡Descubre más sobre nuestros cursos!</p>
 
                 </div>
                 <!-- list Courses Start -->
