--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h1 class="section-title bg-white text-center px-3 color-oran custom-h6">Cursos de Baile para Adultos</h1>
                     <p class="custom-h2 mb-2 color-cafe">¿Sientes que tus pasos no se ven fluidos o elegantes en la pista de baile?</p>
-                    <p>En Cuban Groove te asesoramos para encontrar el curso de baile ideal. Aprenderas a bailar mientras te integras a una comunidad salsera y timbera. Practicaras lo aprendido con la profesora y alumn@s en diferentes eventos sociales de baile.. ¡Descubre más sobre nuestros cursos!</p>
+                    <p>Aprenderas a bailar mientras te integras a una comunidad salsera y timbera. Practicaras lo aprendido con la profesora y alumn@s en diferentes eventos sociales de baile.. ¡Descubre más sobre nuestros cursos!</p>
 
                 </div>
                 <!-- list Courses Start -->
