--- a/templates/_base.html
+++ b/templates/_base.html
@@ -150,11 +150,11 @@
           </div>
       </nav>
       <!-- Navbar End -->
-        {% if not 'courses-group' in request.path %}
+        {% if not 'courses' in request.path %}
             <!-- Banner Start -->
             <div class="banner-top text-center">
                 <a id="btn_home_pr_contact_a" href="{% url 'courses_group' %}">
-                    <img id="btn_home_pr_contact" src="{% static 'img/promo/promo_desk.png' %}" alt="Promociones de fin de año" class="img-fluid" style="width: 100%; height: auto;">
+                    <img id="btn_home_pr_contact" src="{% static 'img/promo/promo_desk.png' %}" alt="Clases de Baile" class="img-fluid" style="width: 100%; height: auto;">
                 </a>
             </div>
             <!-- Banner End -->
