--- a/templates/courses/courses.html
+++ b/templates/courses/courses.html
@@ -12,7 +12,7 @@
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h1 class=" section-title bg-white text-center px-3 color-oran custom-h6">{% if title %}{{ title }}{% endif %}</h1>
                     <h2 class="mb-2 color-cafe">"¿Te sientes inseguro al bailar en eventos sociales?"</h2>
-                    <p>En Cuban Groove te ayudamos a encontrar el curso de baile perfecto para ti. Aprenderas a bailar mientras te integras a una comunidad salsera y timbera. Practicaras lo aprendido con la profesora y alumn@s en diferentes eventos sociales de baile. ¡Únete a nuestras clases hoy mismo!</p>
+                    <p>Te ayudamos a encontrar el curso de baile perfecto para ti. Practicaras lo aprendido con la profesora y alumn@s en diferentes eventos sociales de baile. ¡Únete a nuestras clases hoy mismo!</p>
 
                 </div>
                 <div class="row g-4 justify-content-center">
