--- a/templates/courses/courses.html
+++ b/templates/courses/courses.html
@@ -7,11 +7,11 @@
 {% block content %}
     {% if list_courses %}
         <!-- Courses Start -->
-        <div class="container-xxl py-5">
+        <div class="container-xxl py-2">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h1 class=" section-title bg-white text-center px-3 color-oran custom-h6">{% if title %}{{ title }}{% endif %}</h1>
-                    <h2 class="mb-2 color-cafe">"¿Te sientes inseguro al bailar en eventos sociales?"</h2>
+                    <h2 class="mb-2 color-cafe custom-h6">"¿Te sientes inseguro al bailar en eventos sociales?"</h2>
                     <p>Te ayudamos a encontrar el curso de baile perfecto para ti. Practicaras lo aprendido con la profesora y alumn@s en diferentes eventos sociales de baile. ¡Únete a nuestras clases hoy mismo!</p>
 
                 </div>
@@ -32,16 +32,29 @@
                                 </div>
                                 <a href="{% url 'courses_detail' course.slug %}" class="card-link">
                                     <div class="text-center p-4 pb-0 border border-secondary rounded">
+                                        <!-- Título del curso -->
                                         <h2 class="mb-0 custom-h5">{{ course.title }}</h2>
+                                    
+                                        <!-- Horario del curso -->
                                         <div class="mb-0">
                                             <small class="fa fa-star color-oran"></small>
                                             <small>{{ course.schedule }}</small>
                                             <small class="fa fa-star color-oran"></small>
                                         </div>
-                                        <h2 class="mb-2 h2-small">{{ course.instructor }}</h2>
-                                        <h6 class="card-title">Lugar</h6>
-                                        <h2 class="h2-small">{{ course.district | safe }}</h2>
+                                    
+                                        <!-- Ubicación -->
+                                        <div class="d-flex align-items-center justify-content-center my-2">
+                                            <i class="fas fa-map-marker-alt me-2"></i>
+                                            <h2 class="h2-small m-0">{{ course.district | safe }}</h2>
+                                        </div>
+                                    
+                                        <!-- Instructor -->
+                                        <div class="d-flex align-items-center justify-content-center my-2">
+                                            <i class="fas fa-chalkboard-teacher me-2"></i>
+                                            <h2 class="mb-2 h2-small m-0">{{ course.instructor }}</h2>
+                                        </div>
                                     </div>
+                                    
                                 </a>
                             </div>
                         </div>
@@ -89,16 +102,28 @@
                                     </div>
                                 </div>
                                 <a href="{% url 'courses_detail' course.slug %}" class="card-link">
-                                    <div class="text-center p-4 pb-0 border border-secondary  rounded">
+                                    <div class="text-center p-4 pb-0 border border-secondary rounded">
+                                        <!-- Título del curso -->
                                         <h2 class="mb-0 custom-h5">{{ course.title }}</h2>
+                                    
+                                        <!-- Horario del curso -->
                                         <div class="mb-0">
                                             <small class="fa fa-star color-oran"></small>
                                             <small>{{ course.schedule }}</small>
                                             <small class="fa fa-star color-oran"></small>
                                         </div>
-                                        <h2 class="mb-2 h2-small">{{ course.instructor }}</h2>
-                                        <h6 class="card-title">Lugar</h6>
-                                        <h2 class="h2-small">{{ course.district | safe }}</h2>
+                                    
+                                        <!-- Ubicación -->
+                                        <div class="d-flex align-items-center justify-content-center my-2">
+                                            <i class="fas fa-map-marker-alt me-2"></i>
+                                            <h2 class="h2-small m-0">{{ course.district | safe }}</h2>
+                                        </div>
+                                    
+                                        <!-- Instructor -->
+                                        <div class="d-flex align-items-center justify-content-center my-2">
+                                            <i class="fas fa-chalkboard-teacher me-2"></i>
+                                            <h2 class="mb-2 h2-small m-0">{{ course.instructor }}</h2>
+                                        </div>
                                     </div>
                                 </a>
                             </div>
