--- a/templates/courses/courses.html
+++ b/templates/courses/courses.html
@@ -11,7 +11,7 @@
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h1 class=" section-title bg-white text-center px-3 color-oran custom-h6">{% if title %}{{ title }}{% endif %}</h1>
-                    <h2 class="mb-2 color-cafe custom-h6">"¿Te sientes inseguro al bailar en eventos sociales?"</h2>
+                    <h2 class="mb-2 color-cafe custom-h6">Baila con confianza y sabor en cualquier evento social</h2>
                     <p>Te ayudamos a encontrar el curso de baile perfecto para ti. Practicaras lo aprendido con la profesora y alumn@s en diferentes eventos sociales de baile. ¡Únete a nuestras clases hoy mismo!</p>
 
                 </div>
