ajuste banner promo

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -173,7 +173,7 @@
             <!-- Banner Start -->
             <div class="banner-top text-center">
                 <a id="btn_home_pr_contact_a" href="{% url 'courses_group' %}">
-                    <img id="btn_home_pr_contact" src="{% static 'img/promo/promo_desk.png' %}" alt="Clases de Baile" class="img-fluid" style="width: 100%; height: auto;">
+                    <img id="btn_home_pr_contact" src="{% static 'img/promo/promo_desk.png' %}" alt="Clases de Baile" style="width: 100%; height: auto;">
                 </a>
             </div>
             <!-- Banner End -->
