--- a/templates/_base.html
+++ b/templates/_base.html
@@ -165,7 +165,7 @@
                   <a href="{% url 'contact' %}" class="nav-item nav-link {% if 'contact' in request.path %}active{% endif %}">Contacto</a>
                   <a href="{% url 'post_list' %}" class="nav-item nav-link {% if 'post_list' in request.path %}active{% endif %}">Blog</a>
               </div>
-              <a href="" id="btn_home_menu_free_class" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block"  style="background-color: #ff6a09;color: white; align-items: center;" data-bs-toggle="modal" data-bs-target="#exampleModal">Promociones<i class="fa fa-arrow-right ms-3"></i></a>
+              <a href="" id="btn_home_menu_free_class" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block"  style="background-color: #ff6a09;color: white; align-items: center;" data-bs-toggle="modal" data-bs-target="#exampleModal">Prueba GRATIS<i class="fa fa-arrow-right ms-3"></i></a>
           </div>
       </nav>
       <!-- Navbar End -->
@@ -259,7 +259,7 @@
 
                 <div class="modal-content">
                     <div class="modal-header text-center" style="background-color: #ff6a09; color: white;">
-                        <h4 class="modal-title w-100 custom-h4">🎉✨ ¡Promociones Especiales! 🎁</h4>
+                        <h4 class="modal-title w-100 custom-h4">🎉¡Reserva tu clase GRATIS ahora! 🎁</h4>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" style="background-color: white;"></button>
                     </div>
                     <div class="modal-body">
