--- a/static/css/style.css
+++ b/static/css/style.css
@@ -439,20 +439,28 @@
 }
 
 .whatsapp-icon {
-    position: fixed; /* Make the icon fixed to the viewport */
-    bottom: 20px; /* Set the bottom margin */
-    right: 20px; /* Set the left margin */
-    z-index: 100; /* Ensure the icon stays on top of other elements */
-    background-color: #25D366; /* WhatsApp green color */
+    position: fixed;
+    bottom: 20px; /* Posición predeterminada */
+    right: 20px;
+    z-index: 100;
+    background-color: #25D366;
     padding: 20px;
     border-radius: 50%;
     cursor: pointer;
-  }
-  
-  .whatsapp-icon i {
+}
+
+/* Ajustar la posición en versión móvil */
+@media (max-width: 768px) {
+    .whatsapp-icon {
+        bottom: 80px; /* Sube el icono en móviles */
+    }
+}
+
+.whatsapp-icon i {
     color: white;
     font-size: 40px;
-  }
+}
+
 
   .infoPrice {
     position: absolute;
@@ -603,5 +611,51 @@
     background: linear-gradient(90deg, #28a745, #34d058);
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
     transform: scale(1.05);
+}
+
+/* Estilos para la barra fija en mobile */
+.mobile-contact-bar {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: white;
+    padding: 12px 15px;
+    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2);
+    border-top: 3px solid #ff6a09; /* Borde superior para destacar */
+    z-index: 9999; /* Asegura que esté siempre por encima de otros elementos */
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 60px; /* Garantiza un tamaño constante */
+}
+
+/* Texto para que se vea bien */
+.mobile-contact-bar span {
+    font-size: 1rem;
+    color: #333;
+}
+
+/* Botón con más presencia */
+.mobile-contact-bar button {
+    background-color: #ff6a09;
+    border: none;
+    padding: 8px 15px;
+    font-weight: bold;
+    border-radius: 8px;
+    transition: all 0.3s ease-in-out;
+}
+
+/* Efecto hover para el botón */
+.mobile-contact-bar button:hover {
+    background-color: #e55a00;
+}
+
+/* Evitar que aparezca en escritorio */
+@media (min-width: 768px) {
+    .mobile-contact-bar {
+        display: none;
+    }
 }
 
