--- a/templates/_base.html
+++ b/templates/_base.html
@@ -259,7 +259,7 @@
 
                 <div class="modal-content">
                     <div class="modal-header text-center" style="background-color: #ff6a09; color: white;">
-                        <h4 class="modal-title w-100 custom-h4">🎉¡Reserva tu clase GRATIS ahora! 🎁</h4>
+                        <h4 class="modal-title w-100 custom-h4">🎁¡Reserva tu clase GRATIS ahora!</h4>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" style="background-color: white;"></button>
                     </div>
                     <div class="modal-body">
