--- a/templates/instructors/instructors_detail.html
+++ b/templates/instructors/instructors_detail.html
@@ -49,7 +49,7 @@
                                     <img class="img-fluid" src="{{ course.image.url }}" alt="{{ course.title }} - Curso de Baile en Cuban Groove">
                                     <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                                         <a href="{% url 'courses_detail' course.slug %}" id="btn_ourtea_cards_read" class="flex-shrink-0 btn btn-sm btn-warning px-3 border-end" style="border-radius: 30px 0 0 30px;">Leer Más</a>
-                                        <a href="#" class="flex-shrink-0 btn btn-sm btn-warning px-3" id="btn_ourtea_cards_contact" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-course="{{ course.title }}" style="border-radius: 0 30px 30px 0;">Obten un Descuento</a>
+                                        <a href="#" class="flex-shrink-0 btn btn-sm btn-warning px-3" id="btn_ourtea_cards_contact" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-course="{{ course.title }}" style="border-radius: 0 30px 30px 0;">Probar Clase</a>
                                     </div>
                                     <div class="infoPrice">
                                         <strong>S/.{{ course.price }}</strong>
