--- a/static/css/style.css
+++ b/static/css/style.css
@@ -625,6 +625,11 @@
     min-height: 60px; /* Garantiza un tamaño constante */
 }
 
+.mobile-contact-bar.hidden {
+    opacity: 0;
+    visibility: hidden;
+}
+
 /* Texto para que se vea bien */
 .mobile-contact-bar span {
     font-size: 1rem;
