--- a/templates/_base.html
+++ b/templates/_base.html
@@ -189,7 +189,7 @@
                         <h4 class="text-white mb-3">Contacto</h4>
                         <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Lima, PERU</p>
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+51 991 337 159</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>cubangroove.pe@gmail.com</p>
+                        <p class="mb-2"><i class="fa fa-envelope me-3"></i> info@cubangrooveperu.com</p>
                         <div class="d-flex mb-5 justify-content-center">
                             <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/luxecoronado/" target="_blank"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/muevetecuba" target="_blank"><i class="fab fa-facebook-f"></i></a>
